tests/fixtures/invalid/pow_str_none_float.py
# Cannot call pow() with Str, None, Float
x = pow("hello", None, 1.0)
